# BaconEngine

./: .clang-format  .clang-format_STOP  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Program.cpp  README.md  asan.supp  compile.sh  compile_flags.txt  config.json  editor.cpp  format.sh  imgui.ini  main.cpp  player.cpp  run.sh
assets/prefabs/: player.json  test.json
assets/scripts/: movement.lua  test.lua  testing.lua
docs/: lua.md
src/: Audio.cpp  Audio.h  BaconMath.h  Camera.cpp  Camera.h  Camera.hpp  Editor.cpp  Editor.h  EditorInstance.cpp  EditorInstance.hpp  Entity.cpp  Entity.h  Entity.hpp  File.cpp  File.h  File.hpp  GameManager.cpp  GameManager.h  GameManager.hpp  GameObject.cpp  GameObject.h  GameObject.hpp  Input.cpp  Input.h  Input.hpp  LuaAPI.cpp  LuaAPI.h  LuaApi.cpp  LuaApi.hpp  PlayerInstance.cpp  PlayerInstance.hpp  Rendering.cpp  Rendering.h  Rendering.hpp  ScriptItem.hpp  Sound.cpp  Sound.hpp  Text.cpp  Text.hpp  TextObject.cpp  (+6 more)
src/Lua/: LuaApi.hpp  Lua_Entity.cpp  Lua_Misc.cpp  Lua_Sound.cpp  Lua_Text.cpp
src/core/: .game_manager.cpp  camera_object.cpp  camera_object.h  entity.cpp  entity.h  game_manager.cpp  game_manager.h  game_object.cpp  game_object.h  game_state.cpp  game_state.h  globals.cpp  globals.h  lua_api.cpp  lua_api.h  text_object.cpp  text_object.h  util.h  uuid.cpp  uuid.h
src/core/2D/: camera_object.cpp  camera_object.h  entity.cpp  entity.h  entity_2d.h  game_manager.cpp  game_manager.h  game_object.cpp  game_object.h  game_state_2d.cpp  game_state_2d.h  object_2d.cpp  object_2d.h  scene_2d.cpp  scene_2d.h  text_object.cpp  text_object.h
src/core/3D/: game_state_3d.h
src/editor/: editor.cpp  editor.h  editor_event.cpp  editor_event.h
src/editor/ui/: editor_ui.cpp  editor_ui.h  imgui_extras.cpp  imgui_extras.h
src/engine/: engine.cpp  engine.h
src/file/: asset_manager.cpp  asset_manager.h  asset_manager_2d.cpp  asset_manager_2d.h  file.cpp  file.h  resource_manager.cpp  resource_manager.h
src/lib/: arena.h  byte_stream.h  pool_allocator.cpp  pool_allocator.h  ring_buffer.cpp  ring_buffer.h
src/rendering/2D/: renderer.cpp  renderer.h  renderer_2d.cpp  renderer_2d.h
testing/json/: leveldata.json  read.cpp  test.json
testing/lua/: engine.cpp
